Propagate Template type on GlobField and GlobArrayField